@@ -55,7 +55,8 @@ MODULE MOD_STARTUP
 # endif
 
 # if defined (NH)
-  USE NON_HYDRO, ONLY: W4ZT, NHQDRX, NHQDRY, NHQDRZ, NHQ2DX, NHQ2DY
+!  USE NON_HYDRO, ONLY: W4ZT, NHQDRX, NHQDRY, NHQDRZ, NHQ2DX, NHQ2DY
+  USE NON_HYDRO, ONLY: W4ZT, NHQDRX, NHQDRY, NHQDRZ, NHQ2DX, NHQ2DY, QP, RHS  ! Siqi
 # endif
 
 # if defined (DYE_RELEASE)
@@ -607,7 +608,7 @@ CONTAINS
     TYPE(NCVAR),  POINTER :: VAR
     TYPE(NCDIM),  POINTER :: DIM
     LOGICAL :: FOUND
-    INTEGER :: STKCNT
+    INTEGER :: STKCNT,i,k
     
     IF(DBG_SET(DBG_SBR)) write(ipt,*) "START: READ_NH" 
 
@@ -619,6 +620,13 @@ CONTAINS
          &("COULD NOT FIND VARIABLE 'W4ZT' IN THE HOTSTART FILE OBJECT")
     CALL NC_CONNECT_AVAR(VAR, W4ZT)
     CALL NC_READ_VAR(VAR,STKCNT)
+    !---> Added by Dr. Lai 2021-01-15
+    DO K=1, KBM1
+      DO I=1, N
+        WW(I,K) = (W4ZT(NV(I,1),K)+W4ZT(NV(I,2),K)+W4ZT(NV(I,3),K)+W4ZT(NV(I,1),K+1)+W4ZT(NV(I,2),K+1)+W4ZT(NV(I,3),K+1))/6.0_SP
+      ENDDO
+    ENDDO
+    !<--- Added by Dr. Lai 2021-01-15
 
     ! LOAD NHQDRX
     VAR => FIND_VAR(NC_START,'NHQDRX',FOUND)
@@ -654,6 +662,22 @@ CONTAINS
          &("COULD NOT FIND VARIABLE 'NHQ2DY' IN THE HOTSTART FILE OBJECT")
     CALL NC_CONNECT_AVAR(VAR, NHQ2DY)
     CALL NC_READ_VAR(VAR,STKCNT)
+
+!---> Siqi Li
+    ! LOAD QP
+!%    VAR => FIND_VAR(NC_START,'QP',FOUND)
+!%    IF(.not. FOUND) CALL FATAL_ERROR&
+!%         &("COULD NOT FIND VARIABLE 'QP' IN THE HOTSTART FILE OBJECT")
+!%    CALL NC_CONNECT_AVAR(VAR, QP)
+!%    CALL NC_READ_VAR(VAR,STKCNT)
+
+    ! LOAD RHS
+!%    VAR => FIND_VAR(NC_START,'RHS',FOUND)
+!%    IF(.not. FOUND) CALL FATAL_ERROR&
+!%         &("COULD NOT FIND VARIABLE 'RHS' IN THE HOTSTART FILE OBJECT")
+!%    CALL NC_CONNECT_AVAR(VAR, RHS)
+!%    CALL NC_READ_VAR(VAR,STKCNT)
+!<--- Siqi Li
 
     IF(DBG_SET(DBG_SBR)) write(ipt,*) "End: READ_NH"
 
@@ -1276,6 +1300,14 @@ CONTAINS
        CALL NC_READ_VAR(VAR,STKCNT)
     END IF
 
+!---> Siqi Li, 2021-01-22
+       VAR => FIND_VAR(NC_START,'ww',FOUND)
+       IF(FOUND) THEN
+         CALL NC_CONNECT_AVAR(VAR, WW)
+         CALL NC_READ_VAR(VAR,STKCNT)
+       ENDIF
+!<--- Siqi Li, 2021-01-22
+
     VAR => FIND_VAR(NC_START,'ua',FOUND)
     IF(.not. FOUND) CALL FATAL_ERROR("COULD NOT FIND VARIABLE 'ua'&
          & IN THE HOTSTART FILE OBJECT")
@@ -1485,6 +1517,7 @@ CONTAINS
          DZZ(J1,K) = DZZ(J2,K)
        END DO	 
      END DO
+     
 #  if defined (WAVE_CURRENT_INTERACTION)     
      END IF
 #  endif      
